<resources>
    <string name="app_name">Dicoding Story</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Want to share your experiences with Dicoding? Share them on Dicoding Story!</string>
    <string name="title_welcome_page">Welcome to Dicoding Story!</string>
    <string name="title_signup_page">Complete your information below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Please enter your data first</string>
    <string name="title_login_page">Ready to share your story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning with Dicoding Story.</string>
    <string name="logout">Log Out</string>
    <string name="error_invalid_name">Name cannot be empty</string>
    <string name="error_invalid_email">Invalid email</string>
    <string name="error_password_short">Password must be at least 8 characters</string>
    <string name="signup_success_title">Registration Successful!</string>
    <string name="signup_success_message">An account with email %1$s has been successfully registered. Log in and get started!</string>
    <string name="next_button">Next</string>
    <string name="login_success_title">Logged In Successfully!</string>
    <string name="login_success_message">An account with email %1$s has successfully logged in. Start sharing your story!</string>
    <string name="error_email_taken">Email is already in use.</string>
    <string name="error_unknown">An error occurred. Please try again later.</string>
    <string name="register_succeed_message">Registration Succeeded</string>
    <string name="register_failed_message">Registration Failed</string>
    <string name="story_description">Story Description</string>
    <string name="story_image_description">Story Image</string>
    <string name="story_detail">Story Details</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="empty_image_warning">Please upload an image file first.</string>
    <string name="add_story_button">Add Story Button</string>
    <string name="setting_localization">Set Localization</string>
    <string name="no_stories_available">No Stories Available</string>
    <string name="preview_image">Preview Image</string>
    <string name="image">Image</string>
</resources>